[Fix] 신규 포맷으로 변경

--- a/algorithm/data-structure/_posts/2019-02-17-stack.md
+++ b/algorithm/data-structure/_posts/2019-02-17-stack.md
@@ -2,29 +2,33 @@
 sidebar:
   title: "Algorithm"
   nav: sidebar-algorithm
+  icon: "fas fa-calculator"
 title: "Stack"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 스택은 일종의 바닥이 막힌 상자라고 보면 된다.
+depth: 
+  - title: "Algorithm"
+    url: /algorithm/
+    icon: "far fa-folder-open"
+  - title: "Data Structure"
+    url: /algorithm/data-structure/
+    icon: "far fa-folder-open"
 ---
-[Algorithm](/algorithm/) / [Data Structure](/algorithm/data-structure/) / **{{ page.title }}**
-{: .notice--warning}
+스택은 일종의 바닥이 막힌 상자라고 보면 된다. 나중에 넣은 물건이 위에 있으므로 먼저 꺼낼 수밖에 없다.  
+LIFO 특성을 가지는 자료구조(Data Structure)를 일컫는다.   
+메모리에 새로 들어오는 데이터의 위치가 메모리 말단 탑이고, 써먹기 위해 내보내는 데이터 역시 메모리 말단을 거친다.   
+스택의 추상자료형(Abstract Data Type—ADT)을 살펴보면, 입력연산은 Push, 출력연산은 Pop이라고 부른다.   
+조회연산은 Peek이라고 하는데, 탑 포인터가 가리키는 데이터를 조회(확인)만 할 뿐, 탑의 인덱스는 변화시키지 않는 연산을 의미한다.  
+스택이라는 자료구조는 프로세스를 구성하는 4개의 요소 중 한 부분이며 함수의 호출에 관여한다.  
 
-## 1. 개요
 
-- 스택은 일종의 바닥이 막힌 상자라고 보면 된다. 나중에 넣은 물건이 위에 있으므로 먼저 꺼낼 수밖에 없다.
-- LIFO 특성을 가지는 자료구조(Data Structure)를 일컫는다. 
-- 메모리에 새로 들어오는 데이터의 위치가 메모리 말단 탑이고, 써먹기 위해 내보내는 데이터 역시 메모리 말단을 거친다. 
-- 스택의 추상자료형(Abstract Data Type—ADT)을 살펴보면, 입력연산은 Push, 출력연산은 Pop이라고 부른다. 
-- 조회연산은 Peek이라고 하는데, 탑 포인터가 가리키는 데이터를 조회(확인)만 할 뿐, 탑의 인덱스는 변화시키지 않는 연산을 의미한다.
-- 스택이라는 자료구조는 프로세스를 구성하는 4개의 요소 중 한 부분이며 함수의 호출에 관여한다.
 
-## 2. 역사
+## 역사
 스택의 역사를 짚어 보면 1946년 앨런 튜링(Alan Turing)까지 거슬러 올라간다. 당시 앨런 튜링은 서브루틴을 호출하는 과정을 버리(bury), 되돌아오는 과정을 언버리(unbury)라고 불렀는데, 이 것을 스택의 기원이라고도 한다. 스택은 콜 스택(Call Stack)이라 하여 컴퓨터 프로그램의 서브루틴에 대한 정보를 저장하는 자료구조에도 널리 활용된다. 컴파일러가 출력하는 에러도 스택처럼 맨 마지막 에러가 가장 먼저 출력되는 순서를 보인다. 또한 스택은 메모리 영역에서 LIFO 형태로 할당하고 접근하는 구조인 아키텍처 레벨의 하드웨어 스택의 이름으로도 널리 사용된다. 이외에도 꽉 찬 스택에 요소를 삽입하고자 할 때 스택에 요소가 넘쳐서 에러가 발생하는 것을 스택 버퍼 오버플로(Stack Buffer Overflow)라고 부른다. 개발자들이 즐겨 이용하는 질의응답 서비스 사이트인 스택 오버플로의 명칭 또한 여기서 유래했다.
 
 
-## 3. 종류
+## 종류
 - 스택은 힙 영역 메모리에서 일반적인 데이터를 저장하는 스택
 - 스택 영역 메모리에서 프로그램의 각 분기점에 변수와 같은 정보를 저장하기 위한 스택
 
@@ -32,7 +36,7 @@ excerpt : 스택은 일종의 바닥이 막힌 상자라고 보면 된다.
 Ascending stack VS Descending stack
 Empty stack VS Full stack
 
-## 4. 구현
+## 구현
 - 배열을 이용한 구현
 
 ```swift
@@ -45,7 +49,7 @@ Empty stack VS Full stack
 
 ```
 
-## 5. 응용
+## 응용
 - 함수가 함수를 호출하거나 자기 자신을 호출하는 것도 스택에 기반을 두고 있다.
 
 
@@ -61,9 +65,9 @@ Empty stack VS Full stack
 
 
 
-## 6. 스택 오버 플로
+## 스택 오버 플로
 - 스택을 흔히 크기를 고정하여서 사용하기 때문에, 이를 다 사용하면 넘치게 된다. 
 - 이에 대한 적당한 대처방안이 준비되어 있지 않으면 다른 메모리 영역을 침범할 수 있게 된다. 
 - 이런 현상 또는 이를 이용한 해킹 기법이 스택 오버플로이다.
 
-출처 : [나무위키 - 스택(자료구조) ](https://namu.wiki/w/%EC%8A%A4%ED%83%9D(%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0)){:target="_blank"}
+[<i class="fas fa-link"></i> 나무위키 - 스택(자료구조)](https://namu.wiki/w/%EC%8A%A4%ED%83%9D(%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0)){:target="_blank"}  
