--- a/algorithm/solved-gold4/_posts/2021-09-10-2448.md
+++ b/algorithm/solved-gold4/_posts/2021-09-10-2448.md
@@ -16,26 +16,20 @@ depth:
     url: /algorithm/solved-gold4/
     icon: "far fa-folder-open"
 ---
-[Algorithm](/algorithm/) / [Solved - Gold 4](/algorithm/solved-gold4/) / **{{ page.title }}**
-{: .notice--warning}
-![](https://d2gd6pc034wcta.cloudfront.net/images/logo@2x.png)
-![](https://static.solved.ac/res/logo-whitetext.svg)
-
-## 1. 개요
 예제를 보고 규칙을 유추한 뒤에 별을 찍어 보세요.
 
-## 2. Example
-## 2.1 입력
+## 1. Example
+### 입력
 첫째 줄에 N이 주어진다. N은 항상 3×2k 수이다. (3, 6, 12, 24, 48, ...) (0 ≤ k ≤ 10, k는 정수)
 
-## 2.1 출력
+### 출력
 첫째 줄부터 N번째 줄까지 별을 출력한다.
 
-## 2.2 예제 입력 1
+### 예제 입력 1
 ```
 24
 ```
-## 2.3 예제 출력 1
+### 예제 출력 1
 ```
                        *                       
                       * *                      
@@ -62,9 +56,8 @@ depth:
  * *   * *   * *   * *   * *   * *   * *   * * 
 ***** ***** ***** ***** ***** ***** ***** *****
 ```
-* [풀러가기](https://www.acmicpc.net/problem/2448)
-
-## 3. 문제 이해
+[<i class="fas fa-link"></i> 풀러가기](https://www.acmicpc.net/problem/2448){:target="_blank"}  
+## 2. 문제 이해
 ```swift
 Input: 3
 Output: 
@@ -103,7 +96,7 @@ Output:
 
 이와 같은 형태로 삼각형이 중첩되는 형태다. 
 
-## 4. 코드
+## 3. 코드
 ```swift
 let input = Int(readLine()!)!
 
@@ -137,7 +130,7 @@ for s in array {
 }
 ```
 
-## 5. 풀이
+## 4. 풀이
 풀기까지 여러 시도와 실패가 있었다.
 처음엔 String(repeating:count:) 로 한줄을 완성하고 print 하는 형태로 접근했는데, 규칙을 찾기가 쉽지 않았다. 그래서 재귀적으로 풀었으나 코드 이해가 쉽지 않았고 복잡했다. 제출 했으나 시간 초과로 실패가 되었다.
 
@@ -146,8 +139,8 @@ for s in array {
 
 ![Image](https://drive.google.com/uc?export=view&id=15Xdof9V2aAL9WT8edIrmFVR5dVQsZ7mf)
 
-## 6. 다른 분의 멋진 코드
-- [yoon_1318](https://www.acmicpc.net/user/yoon_1318)
+## 5. 다른 분의 멋진 코드
+[<i class="fas fa-link"></i> yoon_1318](https://www.acmicpc.net/user/yoon_1318){:target="_blank"}  
 
 ```swift
 var size: Int = Int(readLine()!)!
@@ -186,7 +179,7 @@ switch size {
 }
 ```
 
-## 7. 잘 배웠습니다.
+## 6. 잘 배웠습니다.
 재귀 + 배열복사로 접근했고 이렇게 접근하는 방법은 생각도 못했다.
 나의 경우 currentStart 에 공백을 주었는데 공백이 없는 부분과 blank 처리가 어려웠는데 blank 처리도 깔끔하다.
 성능이나 여러면에서 배울점이 많다.
