--- a/cs/memory/_posts/2018-12-31-memory.md
+++ b/cs/memory/_posts/2018-12-31-memory.md
@@ -16,12 +16,12 @@ depth:
     icon: "far fa-folder-open"
 ---
 0과 1을 저장할 수 있는 저장공간을 가진 반도체  
-전기가 들어오면 1, 전기가 들어오지 않으면 0이 처리 된다.
+<i class="fas fa-bolt"></i> 전기가 들어오면 1, 전기가 들어오지 않으면 0이 처리 된다.
 
 ![Image](https://drive.google.com/uc?export=view&id=1ofk4896DRh9fA320bZUcXX3bW41MYDO8)
 
 ## 종류
-### 램 8G, 16G를 말하는 메모리
+### <i class="fas fa-memory"></i> 램 8G, 16G를 말하는 메모리
 실행 중인 프로그램과 프로그램에서 사용되는 데이터를 저장하는데 사용되는 메인 메모리
-### 하드디스크
+### <i class="fas fa-hdd"></i> 하드디스크
 파일을 저장하는 의미에서 일종의 메모리라고 볼 수 있다.
