--- a/algorithm/solved-silver1/_posts/2021-09-09-2447.md
+++ b/algorithm/solved-silver1/_posts/2021-09-09-2447.md
@@ -3,7 +3,7 @@ sidebar:
   title: "Algorithm"
   nav: sidebar-algorithm
   icon: "fas fa-calculator"
-title: "2447 별 찍기 - 10"
+title: "[Swift] 2447 별 찍기 - 10"
 toc: true
 toc_sticky: true
 toc_label: 목차
