[Fix] 신규 포맷으로 변경

--- a/algorithm/programers-level1/_posts/2021-08-22-prime.md
+++ b/algorithm/programers-level1/_posts/2021-08-22-prime.md
@@ -2,27 +2,28 @@
 sidebar:
   title: "Algorithm"
   nav: sidebar-algorithm
+  icon: "fas fa-calculator"
 title: "소수 찾기"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 1부터 입력받은 숫자 n 사이에 있는 소수의 개수를 반환하는 함수, solution을 만들어 보세요.
+depth: 
+  - title: "Algorithm"
+    url: /algorithm/
+    icon: "fas fa-calculator"
+  - title: "Programers level1"
+    url: /algorithm/programers-level1/
+    icon: "far fa-folder-open"
 ---
-[Algorithm](/algorithm/) / [Programers level1](/algorithm/programers-level1/) / **{{ page.title }}**
-{: .notice--warning}
-![](https://programmers.co.kr/assets/bi-programmers-light-0d164d49b51a123bab5cca11106145d6fac5a5ac04b8646780369c2a5bc0dd79.png)
-
-## 1. 개요
-1부터 입력받은 숫자 n 사이에 있는 소수의 개수를 반환하는 함수, solution을 만들어 보세요.
-
-소수는 1과 자기 자신으로만 나누어지는 수를 의미합니다.
+1부터 입력받은 숫자 n 사이에 있는 소수의 개수를 반환하는 함수, solution을 만들어 보세요.  
+소수는 1과 자기 자신으로만 나누어지는 수를 의미합니다.  
 (1은 소수가 아닙니다.)
 
     제한 조건
     n은 2이상 1000000이하의 자연수입니다.
 {: .notice--info}
 
-## 2. Example
+## Example
 ```swift
 Input: 10
 Output: 4
@@ -34,12 +35,12 @@ Output: 3
 Explanation: 1부터 5 사이의 소수는 [2,3,5] 3개가 존재하므로 3를 반환
 ```
     
-[풀러가기](https://programmers.co.kr/learn/courses/30/lessons/12921#)
+[<i class="fas fa-link"></i> 풀러가기](https://programmers.co.kr/learn/courses/30/lessons/12921#)
 
-## 3. 문제 이해
+## 문제 이해
 - 1과 자기자신,  2개뿐이다.
 
-## 4. 코드
+## 코드
 ```swift
 func solution(_ n:Int) -> Int {
     var count = 0
@@ -69,7 +70,7 @@ func isPrime(_ n: Int) -> Bool {
 }
 ```
 
-## 5. 풀이
+## 풀이
 - 어떤 정수가 소수인지 판별하는 방법은 그 소수의 제곱근까지 나누어 보는 것
 ```
 i * i <= n
@@ -77,7 +78,7 @@ i * i <= n
 - 여기가 효율성의 핵심이다.
 - if == 1 은 발생하지 않지만 제약조건을 꼼꼼히 읽어보지 못했다.
 
-## 6. 다른 분의 멋진 코드
+## 다른 분의 멋진 코드
 ```swift
 func solution(_ n:Int) -> Int {
     var primes:[Bool] = [Bool](repeating:false, count:n+1);
@@ -94,8 +95,6 @@ func solution(_ n:Int) -> Int {
 }
 ```
 
-## 7. 잘 배웠습니다.
-- 재귀를 사용하지 않은 점 +
-- 끝까지 검사하는 점은 정석이라 할 수 있겠다.
-- 나의 코드는 앞의 조건문이 있는 반면 다른분의 멋진 코드는 그런 부분이 없어 깔끔 했다.
+## 잘 배웠습니다.
+재귀를 사용하지 않고 풀고 싶었는데 멋진코드는 성공했다. dp 를 사용해 공간 사용이 크지만 소수 문제는 dp로 접근하는 것이 좋을 것 같다.
 
