--- a/algorithm/solved-gold4/_posts/2021-09-10-2448.md
+++ b/algorithm/solved-gold4/_posts/2021-09-10-2448.md
@@ -11,7 +11,7 @@ excerpt : 예제를 보고 규칙을 유추한 뒤에 별을 찍어 보세요.
 depth: 
   - title: "Algorithm"
     url: /algorithm/
-    icon: "far fa-folder-open"
+    icon: "fas fa-calculator"
   - title: "Solved - Gold 4"
     url: /algorithm/solved-gold4/
     icon: "far fa-folder-open"
