[Fix] 넘버링 제거

--- a/algorithm/solved-gold4/_posts/2021-09-10-2448.md
+++ b/algorithm/solved-gold4/_posts/2021-09-10-2448.md
@@ -18,7 +18,7 @@ depth:
 ---
 예제를 보고 규칙을 유추한 뒤에 별을 찍어 보세요.
 
-## 1. Example
+## Example
 ### 입력
 첫째 줄에 N이 주어진다. N은 항상 3×2k 수이다. (3, 6, 12, 24, 48, ...) (0 ≤ k ≤ 10, k는 정수)
 
@@ -57,7 +57,7 @@ depth:
 ***** ***** ***** ***** ***** ***** ***** *****
 ```
 [<i class="fas fa-link"></i> 풀러가기](https://www.acmicpc.net/problem/2448){:target="_blank"}  
-## 2. 문제 이해
+## 문제 이해
 ```swift
 Input: 3
 Output: 
@@ -96,7 +96,7 @@ Output:
 
 이와 같은 형태로 삼각형이 중첩되는 형태다. 
 
-## 3. 코드
+## 코드
 ```swift
 let input = Int(readLine()!)!
 
@@ -130,7 +130,7 @@ for s in array {
 }
 ```
 
-## 4. 풀이
+## 풀이
 풀기까지 여러 시도와 실패가 있었다.
 처음엔 String(repeating:count:) 로 한줄을 완성하고 print 하는 형태로 접근했는데, 규칙을 찾기가 쉽지 않았다. 그래서 재귀적으로 풀었으나 코드 이해가 쉽지 않았고 복잡했다. 제출 했으나 시간 초과로 실패가 되었다.
 
@@ -139,7 +139,7 @@ for s in array {
 
 ![Image](https://drive.google.com/uc?export=view&id=15Xdof9V2aAL9WT8edIrmFVR5dVQsZ7mf)
 
-## 5. 다른 분의 멋진 코드
+## 다른 분의 멋진 코드
 [<i class="fas fa-link"></i> yoon_1318](https://www.acmicpc.net/user/yoon_1318){:target="_blank"}  
 
 ```swift
@@ -179,7 +179,7 @@ switch size {
 }
 ```
 
-## 6. 잘 배웠습니다.
+## 잘 배웠습니다.
 재귀 + 배열복사로 접근했고 이렇게 접근하는 방법은 생각도 못했다.
 나의 경우 currentStart 에 공백을 주었는데 공백이 없는 부분과 blank 처리가 어려웠는데 blank 처리도 깔끔하다.
 성능이나 여러면에서 배울점이 많다.
