[Fix] title prefix 추가

--- a/algorithm/programers-level1/_posts/2021-08-22-prime.md
+++ b/algorithm/programers-level1/_posts/2021-08-22-prime.md
@@ -3,7 +3,7 @@ sidebar:
   title: "Algorithm"
   nav: sidebar-algorithm
   icon: "fas fa-calculator"
-title: "소수 찾기"
+title: "[Swift] 소수 찾기"
 toc: true
 toc_sticky: true
 toc_label: 목차
