[Fix] 신규 포맷으로 변경

--- a/algorithm/data-structure/_posts/2019-02-17-stack.md
+++ b/algorithm/data-structure/_posts/2019-02-17-stack.md
@@ -10,7 +10,7 @@ toc_label: 목차
 depth: 
   - title: "Algorithm"
     url: /algorithm/
-    icon: "far fa-folder-open"
+    icon: "fas fa-calculator"
   - title: "Data Structure"
     url: /algorithm/data-structure/
     icon: "far fa-folder-open"
