[Feat] Group 추가

--- a/git/commend/branch/_posts/2018-07-06-delete.md
+++ b/git/commend/branch/_posts/2018-07-06-delete.md
@@ -7,6 +7,7 @@ title: "[Git] branch -d - 브랜치 삭제하기"
 toc: true
 toc_sticky: true
 toc_label: 목차
+group: git-commend
 depth: 
   - title: "Git"
     url: /git/
