--- a/git/commend/_posts/2018-06-25-log.md
+++ b/git/commend/_posts/2018-06-25-log.md
@@ -7,6 +7,7 @@ title: "[Git] log - 히스토리 조회하기"
 toc: true
 toc_sticky: true
 toc_label: 목차
+group: git-commend
 depth: 
   - title: "Git"
     url: /git/
