--- a/git/commend/_posts/2018-10-17-rebase.md
+++ b/git/commend/_posts/2018-10-17-rebase.md
@@ -7,6 +7,7 @@ title: "[Git] rebase - 커밋들을 합쳐 새로운 커밋을 만든다."
 toc: true
 toc_sticky: true
 toc_label: 목차
+group: git-commend
 depth: 
   - title: "Git"
     url: /git/
