--- a/git/commend/_posts/2018-10-17-revert.md
+++ b/git/commend/_posts/2018-10-17-revert.md
@@ -7,6 +7,7 @@ title: "[Git] revert - commit한 이전 코드 취소하기"
 toc: true
 toc_sticky: true
 toc_label: 목차
+group: git-commend
 depth: 
   - title: "Git"
     url: /git/
