--- a/git/commend/branch/_posts/2018-07-06-fetch.md
+++ b/git/commend/branch/_posts/2018-07-06-fetch.md
@@ -7,6 +7,7 @@ title: "[Git] fetch - 원격저장소 코드 로컬에 가져오기"
 toc: true
 toc_sticky: true
 toc_label: 목차
+group: git-commend
 depth: 
   - title: "Git"
     url: /git/
