[Fix] 신규 포맷으로 변경

--- a/algorithm/data-structure/_posts/2019-02-17-stack.md
+++ b/algorithm/data-structure/_posts/2019-02-17-stack.md
@@ -65,4 +65,4 @@ Ascending stack VS Descending stack<br/>
 Empty stack VS Full stack
 
 ## 출처
-[<i class="fas fa-link"></i> 나무위키 - 스택(자료구조)](https://namu.wiki/w/%EC%8A%A4%ED%83%9D(%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0))
+{% include b-link.html title="나무위키 - 스택(자료구조)" url = "https://namu.wiki/w/%EC%8A%A4%ED%83%9D(%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0)" %}
