--- a/algorithm/data-structure/_posts/2019-02-17-stack.md
+++ b/algorithm/data-structure/_posts/2019-02-17-stack.md
@@ -3,7 +3,7 @@ sidebar:
   title: "Algorithm"
   nav: sidebar-algorithm
   icon: "fas fa-calculator"
-title: "Stack"
+title: "[Swiift] Stack"
 toc: true
 toc_sticky: true
 toc_label: 목차
