[Fix] 서버 종료 커맨드 수정

--- a/git/blog/_posts/2021-08-18-start.md
+++ b/git/blog/_posts/2021-08-18-start.md
@@ -72,9 +72,9 @@ config.yml 를 수정하면 재시작이 필요하다.
 bundle exec jekyll serve
 ```
 
-### 3.2 로컬 서버 종료(Mac 기준)
+### 3.2 로컬 서버 종료
 ```
-commend + c
+ctrl-c
 ```
 
 이후엔
