[Fix] group -> tag 로 변경

--- a/git/commend/_posts/2018-06-25-log.md
+++ b/git/commend/_posts/2018-06-25-log.md
@@ -7,7 +7,7 @@ title: "[Git] log - 히스토리 조회하기"
 toc: true
 toc_sticky: true
 toc_label: 목차
-group: git-commend
+tag: "Git Commend"
 depth: 
   - title: "Git"
     url: /git/
@@ -18,7 +18,7 @@ depth:
 ---
 Git의 기초 커밋 히스토리 조회하기
 
-## 1. Options
+## Options
 ### p  
 -p 는 각 커밋의 diff 결과를 보여준다.
     
@@ -35,7 +35,7 @@ oneline 옵션은 각 커밋을 한 라인으로 보여준다.
 ### format
 나만의 포맷으로 결과를 출력하고 싶을 때 사용한다
     
-## 2. 코드
+## 코드
 ### 시간 순
 ```
 git log
@@ -82,7 +82,7 @@ git git log --pretty=format:"%h - %an, %ar : %s"
 | %cr | 커미터 상대적 시각 |
 | %s | 요약 |
 
-## 3. 참고
+## 참고
 [<i class="fas fa-link"></i> Git의 기초 커밋 히스토리 조회하기](https://git-scm.com/book/ko/v1/Git의-기초-커밋-히스토리-조회하기){:target="_blank"}
 
 
