--- a/git/commend/branch/_posts/2018-07-06-create.md
+++ b/git/commend/branch/_posts/2018-07-06-create.md
@@ -7,7 +7,7 @@ title: "[Git] branch - 브랜치 생성하기"
 toc: true
 toc_sticky: true
 toc_label: 목차
-group: git-commend
+tag: "Git Commend"
 depth: 
   - title: "Git"
     url: /git/
