[Fix] group -> tag 로 변경

--- a/ios/uiresponder/uiview/_posts/2021-04-23-bounds.md
+++ b/ios/uiresponder/uiview/_posts/2021-04-23-bounds.md
@@ -7,8 +7,7 @@ title: "bounds"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 자신 기준
-group: "UIResponder"
+tag: "UIView"
 depth: 
   - title: "iOS"
     url: /ios/
@@ -20,6 +19,7 @@ depth:
     url: /ios/uiresponder/uiview/
     icon: "far fa-folder-open"
 ---
+자신 기준  
 | frame     | bounds     |
 |---    |---    |
 | View의 위치와 크기를 나타낼 때     | View를 회전한 후 View의 **실제 크기를 알고 싶을 때**<br>View 내부에 그림을 그릴 때 (drawRect)<br>ScrollView에서 스크롤링 할 때     |
