--- a/ios/uiresponder/uiview/_posts/2021-04-23-draw-rect.md
+++ b/ios/uiresponder/uiview/_posts/2021-04-23-draw-rect.md
@@ -7,8 +7,7 @@ title: "draw(_ rect: CGRect)"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 전달된 CGRect 의 영역에 대해 뷰를 다시 그릴때 호출된다.
-group: "UIResponder"
+tag: "UIView"
 depth: 
   - title: "iOS"
     url: /ios/
