--- a/ios/uiresponder/uiview/_posts/2021-04-23-frame.md
+++ b/ios/uiresponder/uiview/_posts/2021-04-23-frame.md
@@ -7,7 +7,7 @@ title: "frame"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : SuperView 기준
+tag: "UIView"
 depth: 
   - title: "iOS"
     url: /ios/
@@ -19,6 +19,7 @@ depth:
     url: /ios/uiresponder/uiview/
     icon: "far fa-folder-open"
 ---
+SuperView 기준  
 | frame     | bounds     |
 |---    |---    |
 | View의 위치와 크기를 나타낼 때     | View를 회전한 후 View의 **실제 크기를 알고 싶을 때**<br>View 내부에 그림을 그릴 때 (drawRect)<br>ScrollView에서 스크롤링 할 때     |
