[Fix] group -> tag 로 변경

--- a/algorithm/baekjoon/_posts/2021-09-09-fileio.md
+++ b/algorithm/baekjoon/_posts/2021-09-09-fileio.md
@@ -7,8 +7,8 @@ title: "[Swift] 빠른 입출력(fread) - FileIO"
 toc: true
 toc_sticky: true
 toc_label: 목차
-group: "BAEKJOON"
-depth: 
+tag: "BAEKJOON"
+depth:
   - title: "Algorithm"
     url: /algorithm/
     icon: "fas fa-calculator"
