--- a/algorithm/data-structure/_posts/2019-02-17-stack.md
+++ b/algorithm/data-structure/_posts/2019-02-17-stack.md
@@ -7,8 +7,8 @@ title: "[Swiift] Stack"
 toc: true
 toc_sticky: true
 toc_label: 목차
-group: "Data Structure"
-depth: 
+tag: "Data Structure"
+depth:
   - title: "Algorithm"
     url: /algorithm/
     icon: "fas fa-calculator"
