--- a/algorithm/programers-level1/_posts/2021-08-22-prime.md
+++ b/algorithm/programers-level1/_posts/2021-08-22-prime.md
@@ -7,9 +7,8 @@ title: "[Swift] 소수 찾기"
 toc: true
 toc_sticky: true
 toc_label: 목차
-group: "Programers level1"
-group: "Programers"
-depth: 
+tag: "Programers level1"
+depth:
   - title: "Algorithm"
     url: /algorithm/
     icon: "fas fa-calculator"
@@ -36,7 +35,7 @@ Input: 5
 Output: 3
 Explanation: 1부터 5 사이의 소수는 [2,3,5] 3개가 존재하므로 3를 반환
 ```
-    
+
 [<i class="fas fa-link"></i> 풀러가기](https://programmers.co.kr/learn/courses/30/lessons/12921#)
 
 ## 문제 이해
@@ -99,4 +98,3 @@ func solution(_ n:Int) -> Int {
 
 ## 잘 배웠습니다.
 재귀를 사용하지 않고 풀고 싶었는데 멋진코드는 성공했다. dp 를 사용해 공간 사용이 크지만 소수 문제는 dp로 접근하는 것이 좋을 것 같다.
-
