--- a/algorithm/solved-gold4/_posts/2021-09-10-2448.md
+++ b/algorithm/solved-gold4/_posts/2021-09-10-2448.md
@@ -8,8 +8,8 @@ toc: true
 toc_sticky: true
 toc_label: 목차
 excerpt : 예제를 보고 규칙을 유추한 뒤에 별을 찍어 보세요.
-group: "BAEKJOON"
-depth: 
+tag: "BAEKJOON"
+depth:
   - title: "Algorithm"
     url: /algorithm/
     icon: "fas fa-calculator"
@@ -54,33 +54,33 @@ depth:
     * *         * *         * *         * *    
    *****       *****       *****       *****   
   *     *     *     *     *     *     *     *  
- * *   * *   * *   * *   * *   * *   * *   * * 
+ * *   * *   * *   * *   * *   * *   * *   * *
 ***** ***** ***** ***** ***** ***** ***** *****
 ```
 [<i class="fas fa-link"></i> 풀러가기](https://www.acmicpc.net/problem/2448){:target="_blank"}  
 ## 문제 이해
 ```swift
 Input: 3
-Output: 
+Output:
   *   
  * *  
-***** 
+*****
 ```
 
 ```swift
 Input: 6
-Output: 
+Output:
      *      
     * *     
    *****    
   *     *   
  * *   * *  
-***** ***** 
+***** *****
 ```
 
 ```swift
 Input: 12
-Output: 
+Output:
            *            
           * *           
          *****          
@@ -92,10 +92,10 @@ Output:
    *****       *****    
   *     *     *     *   
  * *   * *   * *   * *  
-***** ***** ***** ***** 
+***** ***** ***** *****
 ```
 
-이와 같은 형태로 삼각형이 중첩되는 형태다. 
+이와 같은 형태로 삼각형이 중첩되는 형태다.
 
 ## 코드
 ```swift
@@ -109,19 +109,19 @@ var array = [
 var num = 3
 while num < input {
   let count = array.count
-  
+
   var temp: [String] = []
-  
+
   for a in array {
     temp.append(a + a)
   }
-  
+
   for i in 0 ..< count {
     var str = array[i]
     str = String(repeating: " ", count: count) + str + String(repeating: " ", count: count)
     array[i] = str
   }
-  
+
   array.append(contentsOf: temp)
   num *= 2
 }
@@ -161,7 +161,7 @@ func makeStar(_ n: Int) {
     }
     return
   }
-  
+
   beforeStar = currentStar
   currentStar = []
   for i in 0..<n/2 {
