--- a/clean/english/_posts/2018-11-19-brb.md
+++ b/clean/english/_posts/2018-11-19-brb.md
@@ -7,8 +7,8 @@ title: "BRB"
 toc: true
 toc_sticky: true
 toc_label: 목차
-group: "English"
-depth: 
+tag: "English"
+depth:
   - title: "Clean"
     url: /clean/
     icon: "fab fa-weixin"
