--- a/cs/cpu/_posts/2019-01-31-register.md
+++ b/cs/cpu/_posts/2019-01-31-register.md
@@ -7,8 +7,8 @@ title: "CPU Register"
 toc: true
 toc_sticky: true
 toc_label: 목차
-group: "CS CPU"
-depth: 
+tag: "CS CPU"
+depth:
   - title: "CS"
     url: /cs/
     icon: "fas fa-microchip"
@@ -34,29 +34,29 @@ CPU 에서 처리할 데이터를 빠르게 검색한다. RAM 은 HDD 보다 비
 ### PC (Program Counter)
 다음 인출(Fetch) 될 명령어의 주소를 가지고 있는 레지스터
 
- 
+
 
 ### AC (Accumulator)
 연산 결과 데이터를 일시적으로 저장하는 레지스터
 
- 
+
 
 ### IR (Instruction Register)
 가장 최근에 실행될 명령어(현재 실행 중인 명령어)가 저장되어 있는 레지스터
 
- 
+
 
 ### SR (Status Register)
 현재 CPU 의 상태를 가지고 있는 레지스터
 
- 
 
-### MAR (Memory Address Register) 
+
+### MAR (Memory Address Register)
 PC 에 저장된 명령어 주소가 사용되기 전에 일시적으로 저장되는 주소 레지스터
 
- 
 
-### MBR (Memory Buffer Register) 
+
+### MBR (Memory Buffer Register)
 기억장치에 저장될 데이터 혹은 읽혀진 데이터가 일시적으로 저장되는 버퍼 레지스터
 
 ### GPR (General Purpose Registers)
