--- a/ios/objectivec/nsobject/_posts/2018-08-23-nsnull.md
+++ b/ios/objectivec/nsobject/_posts/2018-08-23-nsnull.md
@@ -7,8 +7,8 @@ title: nil, Nil, NULL, NSNull 대한 차이
 toc: true
 toc_sticky: true
 toc_label: 목차
-group: "NSObject"
-depth: 
+tag: "NSObject"
+depth:
   - title: "iOS"
     url: /ios/
     icon: "fab fa-app-store-ios"
@@ -40,11 +40,11 @@ int *intPtr = NULL;
 
 ## NSNull
 ```objectivec
-[array addObject:[NSNull null]]; 
+[array addObject:[NSNull null]];
 if ([array objectAtIndex:0] == [NSNull null])
 ```
 - NSObject를 상속받는 객체
 - collection item을 null로 설정할 필요가 있을때 사용
 
-참고: 
+참고:
 - [Inboon's Story - nil, Nil, null, NSNull의 차이](https://inboony.tistory.com/10)
