--- a/ios/uiresponder/uiview/_posts/2021-04-23-draw-rect.md
+++ b/ios/uiresponder/uiview/_posts/2021-04-23-draw-rect.md
@@ -3,7 +3,7 @@ sidebar:
   title: "iOS"
   nav: sidebar-ios
   icon: "fab fa-app-store-ios"
-title: "draw(_ rect: CGRect)"
+title: "[UIView] draw(_ rect: CGRect)"
 toc: true
 toc_sticky: true
 toc_label: 목차
@@ -22,19 +22,19 @@ depth:
 전달된 CGRect 의 영역에 대해 뷰를 다시 그릴때 호출된다.
 
 
-## 2. rect: CGRect
-- 첫 호출 시 rect 의 범위는 View의 bounds 의 비율이 된다. 
-- 그러나 이후 호출 될때 rect 의 범위는 View의 일부만 지정 될 수도 있다.
+## rect: CGRect
+첫 호출 시 rect 의 범위는 View의 bounds 의 비율이 된다.  
+그러나 이후 호출 시 rect 의 범위는 View의 일부만 지정 될 수도 있다.
 
-## 3. 사용이 필요할 경우
-- Core Graphics 및 UIKit과 같은 기술을 사용하여 뷰의 내용을 그리는 드로잉 코드를 구현해야할때.
-- UIGraphicsGetCurrentContext() 를 얻을 수 있다.
+## 사용이 필요할 경우
+Core Graphics 및 UIKit과 같은 기술을 사용하여 뷰의 내용을 그리는 드로잉 코드를 구현해야할때.  
+UIGraphicsGetCurrentContext() 를 얻을 수 있다.
 
-## 4. 주의
-- **직접 이 메소드를 호출하면 안된다.** 
-- [setNeedsDisplay()](/ios/uiresponder/uiview/setNeedsDisplay) 또는 setNeedsDisplay(_ :) 로 호출하자.
+## 주의: 직접 이 메소드를 호출하면 안된다.
+[<i class="fas fa-link"></i> setNeedsDisplay()](ios/uiresponder/uiview/setNeedsDisplay/) 또는 setNeedsDisplay(_ :) 로 호출하자.  
 
-- **draw 메서드 내에서 super 를 호출할 필요는 없다**. 하지만 만약 View 가 다른 View 를 상속하게 된다면, draw 메서드 구현부의 적절한 위치레 super를 호출해주어야 한다.
+**draw 메서드 내에서 super 를 호출할 필요는 없다**. 하지만 만약 View 가 다른 View 를 상속하게 된다면, draw 메서드 구현부의 적절한 위치레 super를 호출해주어야 한다.
 
 
-출처: [applebuddy](https://0urtrees.tistory.com/157)
+## 출처
+[<i class="fas fa-link"></i> applebuddy](https://0urtrees.tistory.com/157){:target="_blank"}
