--- a/ios/xcode/_posts/2021-09-17-tv-kodi.md
+++ b/ios/xcode/_posts/2021-09-17-tv-kodi.md
@@ -8,8 +8,8 @@ toc: true
 toc_sticky: true
 toc_label: 목차
 icon: "fas fa-link"
-group: "Xcode"
-depth: 
+tag: "Xcode"
+depth:
   - title: "iOS"
     url: /ios/
     icon: "fab fa-app-store-ios"
@@ -27,4 +27,3 @@ Xcode Build 를 통해 국내 OTT 를 Apple TV 에서 사용할 수 있다하여
 ](https://kodi.wiki/view/HOW-TO:Install_Kodi_on_Apple_TV_4_and_5_(HD_and_4K)){:target="_blank"}  
 [<i class="fas fa-link"></i> 애플TV로 탈옥없이 티빙 , Wavve , Watcha 국내 OTT 활용하기
 ](https://blog.naver.com/PostView.nhn?blogId=lilyy0104&logNo=222283753086&parentCategoryNo=&categoryNo=13&viewDate=&isShowPopularPosts=true&from=search){:target="_blank"}  
-
