--- a/swift/5-5/_posts/2021-08-22-actor.md
+++ b/swift/5-5/_posts/2021-08-22-actor.md
@@ -2,20 +2,24 @@
 sidebar:
   title: "Swift"
   nav: sidebar-swift
-title: "Actor"
+  icon: "fab fa-swift"
+title: "[Swift 5.5] Actor"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : Reference type 이다.
+tag: "Swift"
+depth:
+  - title: "Swift"
+    url: /swift/
+    icon: "fab fa-swift"
+  - title: "5.5"
+    url: /swift/5.5/
+    icon: "far fa-folder-open"
 ---
-[Swift](/swift/) / [5.5](/swift/5.5/) / **{{ page.title }}**
-{: .notice--warning}
+Reference type 이다.  
+스레드의 모델(MVVM 처럼 뷰-뷰모델을 만드는 것과 유사하다)
 
-## 1. 개요
-- Reference type 이다.
-- 스레드의 모델(MVVM 처럼 뷰-뷰모델을 만드는 것과 유사하다)
-
-## 2. Actor
+## Actor
 - 한 번에 하나의 작업만 변경 가능한 상태에 액세스할 수 있도록 허용해 엑세스 할 수 있도록 허용함으로 안전하다.
 - 스레드의 안전성을 보장하기 위해 동시 하나의 Task 에 접근 보장한다.
 
@@ -32,7 +36,7 @@ actor TemperatureLogger {
     }
 }
 ```
-    
+
 ```swift
 let logger = TemperatureLogger(label: "Outdoors", measurement: 25)
 print(await logger.max)
@@ -54,11 +58,11 @@ extension TemperatureLogger {
 
 ~~- 클래스에서 액터 외부에서 max 를에 접근하면 컴파일 오류가 발생한다고 합니다.
     * 액터의 로컬 상태에 엑세스 할수 있도록 보장한다고 하고 이를 actor isolation. 라고 합니다.~~
-    * 도데체 뭔말이야 다시 정리 필요!! 
+    * 도데체 뭔말이야 다시 정리 필요!!
 
-## 3. @MainActor
+## @MainActor
 - SwiftUI 의 Published 설정하는 코드 는 MainActor 스레드 에서 실행되어야 한다.
 
-참고: 
+참고:
 - [Swift.org - Concurrency](https://docs.swift.org/swift-book/LanguageGuide/Concurrency.html)
 - [raywenderlich.com - async/await in SwiftUI](https://www.raywenderlich.com/25013447-async-await-in-swiftui)
