--- a/swift/closure/_posts/2021-08-23-currying.md
+++ b/swift/closure/_posts/2021-08-23-currying.md
@@ -2,23 +2,26 @@
 sidebar:
   title: "Swift"
   nav: sidebar-swift
-title: "Currying"
+  icon: "fab fa-swift"
+title: "[Swift] Currying"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : Reference type 이다.
+depth:
+  - title: "Swift"
+    url: /swift/
+    icon: "fab fa-swift"
+  - title: "Closure"
+    url: /swift/closure/
+    icon: "far fa-folder-open"
 ---
-[Swift](/swift/) / [Closure](/swift/closure/) / **{{ page.title }}**
-{: .notice--warning}
+수학과 컴퓨터 과학에서 커링(currying)이란 다중 인수 (혹은 여러 인수의 튜플)을 갖는 함수를 단일 인수를 갖는 함수들의 함수열로 바꾸는 것을 말한다.   
+모지즈 쇤핑클에 의해 도입되었고, 이후 [<i class="fas fa-link"></i> 해스켈 커리](https://ko.wikipedia.org/wiki/%ED%95%B4%EC%8A%A4%EC%BC%88_%EC%BB%A4%EB%A6%AC){:target="_blank"}에 의해 발전하였다.
 
-## 1. 개요
-- 수학과 컴퓨터 과학에서 커링(currying)이란 다중 인수 (혹은 여러 인수의 튜플)을 갖는 함수를 단일 인수를 갖는 함수들의 함수열로 바꾸는 것을 말한다. 
-- 모지즈 쇤핑클에 의해 도입되었고, 이후 [해스켈 커리](https://ko.wikipedia.org/wiki/%ED%95%B4%EC%8A%A4%EC%BC%88_%EC%BB%A4%EB%A6%AC)에 의해 발전하였다.
-
-## 2. 장점
-- 작은 함수단위로 세분화가 가능합니다.
-- 세분화된 함수는 재사용이 용이합니다.
-- 가독성을 높여줍니다.
+## 장점
+작은 함수단위로 세분화가 가능하다.
+세분화된 함수는 재사용이 용이하다.
+가독성을 높여준다.
 
 ```swift
 // 일반적인 함수
@@ -46,4 +49,5 @@ func curry<A, B, C>(_ fn: @escaping (A, B) -> C) -> (A) -> (B) -> C {
     }
 }
 ```
-- 출처: [Functional Swift — Currying](https://medium.com/nuglif/functional-swift-currying-d398a73bf1ed)
+## 출처
+[<i class="fas fa-link"></i> Functional Swift — Currying](https://medium.com/nuglif/functional-swift-currying-d398a73bf1ed){:target="_blank"}
