--- a/swift/collections/_posts/2021-07-23-array.md
+++ b/swift/collections/_posts/2021-07-23-array.md
@@ -2,171 +2,214 @@
 sidebar:
   title: "Swift"
   nav: sidebar-swift
+  icon: "fab fa-swift"
 title: "Array"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : Value type 이다.
+tag: "Swift Collections"
+depth:
+  - title: "Swift"
+    url: /swift/
+    icon: "fab fa-swift"
+  - title: "Collections"
+    url: /swift/collections/
+    icon: "far fa-folder-open"
 ---
-[Swift](/swift/) / [Collections](/swift/collections/) / **{{ page.title }}**
-{: .notice--warning}
-
-## 1. 개요
+Value type 이다.  
 ```swift
 @frozen public struct Array<Element>
 ```
 
-## 2. 조회
-- O(n)
+## 조회
+```
+O(n)
+```
+## append
+### append(_ newElement: Element)
+#### 평균 시간 복잡도
 
-## 3. append
-## 3.1 append(_ newElement: Element)
-- 평균 시간 복잡도 
-    - O(1)
-- 최악의 시간복잡(메모리를 재할당 해야 할 때) 
-    - O(N)
-    
-## 3.1 append(contentsOf:)
-- 평균 O(M)
-    
-## 3.2 insert(_ newElement: Element, at i: Int)
-- O(N)입니다. i가 마지막 index일 경우, append와 시간 복잡도가 같습니다.
+```
+O(1)
+```
+#### 최악의 시간복잡도(메모리를 재할당 해야 할 때)
 
-     
-
-## 4. count
-- O(1)
-
-     
-
-## 4. subscript(_:)
-
-- read는 항상 O(1), 
-- write는 일반적으로 O(1)입니다. 
-- NSArrary와 brideged 됐을 경우나 다른 arrary와 storage를 공유하고 있을 경우는 O(N)으로 바뀝니다. (Copy on Write)
-
-     
-
-## 4.    randomElement()
-
-    O(1)입니다.
-
-     
-
-## 4.    reserveCapacity(_:)
-
-    O(N)입니다.
-
-     
-
-## 4.    last
-
-    O(1)입니다.
-
-     
-
-## 4.    isEmpty
-
-    O(1)입니다.
-
-     
-
-## 4.    popLast(), removeLast()
-
-    O(1)입니다.
-
-     
-
-## 4.    remove(at:)
-
-    O(N)입니다. 
-
-     
-
-## 4.    removeFirst()
-
-    O(N)입니다.
-
-     
-
-## 4.    removeAll(keepingCapacity:)
-
-    O(N)입니다.
-
-     
-
-## 4.    contains(_:), contains(where:)
-
-    O(N)입니다.
-
-     
-
-## 4.    allSatisfy(_:)
-
-    O(N)입니다.
-
-     
-
-## 4.    first(where:), firstIndex(where:), last(where:), lastIndex(where:), firstIndex(of:), lastIndex(of:)
-
-    O(N)입니다.
-
-     
-
-## 4.    min(), max()
-
-    O(N)입니다.
-
-     
-
-## 4.    enumerated()
-
-    O(N)입니다.
-
-     
-
-## 4.    sort(), sorted()
-
-    O(N logN)입니다. Swift에선 MergeSort와 InsertionSort를 기반으로 만든 Timsort를 사용합니다.
-    
-## 4.    reverse()
-
-    O(n)입니다.
-
-     
-
-## 4. rereversed()
-
-    O(1)입니다. revese()와 시간복잡도가 다릅니다. ReversedCollection을 반환하기 때문입니다. ReversedCollection는 참조 순서를 역순으로 하게 만듭니다.
-
-     
-
-## 4. shuffle(), shuffled()
-
-    O(N)입니다.
-
-     
-
-## 4. partition(by:)
-
-    O(N)입니다.
-
-     
-
-## 4. swapAt(_:_:)
-
-    O(1)입니다.
-
-     
-
-## 4. split(separator:maxSplits:omittingEmptySubsequences:), split(maxSplits:omittingEmptySubsequences:whereSeparator:)
-
-    O(N)입니다.
-
-     
-
-## 4.elementsEqual(_:), ==
-
-    O(M)입니다. M은 두 sequence length중에 더 작은 length입니다.
-
-- [github.com/apple/swift/blob/main/stdlib/public/core/Array](https://github.com/apple/swift/blob/main/stdlib/public/core/Array.swift)
+```
+O(N)
+```
+### append(contentsOf:)
+```
+평균 O(M)
+```
+## insert(_ newElement: Element, at i: Int)
+```
+O(N)
+i가 마지막 index일 경우, append와 시간 복잡도가 같다.
+```
+
+
+## count
+```
+O(1)
+```
+
+
+## subscript(_:)
+```
+read는 항상 O(1)
+write는 일반적으로 O(1)
+```
+>NSArrary와 brideged 됐을 경우나 다른 arrary와 storage를 공유하고 있을 경우는 [<i class="fas fa-link"></i> Copy on Write](/swift/collections/copy-on-write/)로 O(N)으로 변경
+
+
+## randomElement()
+```
+O(1)
+```
+
+
+## reserveCapacity(_:)
+```
+O(N)
+```
+
+
+## last
+```
+O(1)
+```
+
+
+## isEmpty
+```
+O(1)
+```
+
+
+## popLast(), removeLast()
+```
+O(1)
+```
+
+
+## remove(at:)
+```
+O(N)
+```
+
+
+## removeFirst()
+```
+O(N)
+```
+
+
+## removeAll(keepingCapacity:)
+```
+O(N)
+```
+
+
+## contains(_:), contains(where:)
+```
+O(N)
+```
+
+
+## allSatisfy(_:)
+```
+O(N)
+```
+
+
+## first(where:)
+```
+O(N)
+```
+## firstIndex(where:)
+```
+O(N)
+```
+## last(where:)
+```
+O(N)
+```
+## lastIndex(where:)
+```
+O(N)
+```
+## firstIndex(of:)
+```
+O(N)
+```
+## lastIndex(of:)
+```
+O(N)
+```
+
+
+## min(), max()
+```
+O(N)
+```
+
+
+## enumerated()
+```
+O(N)
+```
+
+
+## sort(), sorted()
+```
+O(N logN)
+```
+>Swift에선 MergeSort와 InsertionSort를 기반으로 만든 Timsort를 사용
+## reverse()
+```
+O(n)
+```
+
+## rereversed()
+```
+O(1)
+revese()와 시간복잡도가 다릅니다.
+ReversedCollection을 반환하기 때문입니다.
+ReversedCollection는 참조 순서를 역순으로 하게 만듭니다.
+```
+
+
+## shuffle(), shuffled()
+```
+O(N)
+```
+
+
+## partition(by:)
+```
+O(N)
+```
+
+
+## swapAt(_:_:)
+```
+O(1)
+```
+
+
+## split(separator:maxSplits:omittingEmptySubsequences:)
+```
+O(N)
+```
+## split(maxSplits:omittingEmptySubsequences:whereSeparator:)
+```
+O(N)
+```
+
+
+## elementsEqual(_:), ==
+```
+O(M), M은 두 sequence length중에 더 작은 length.
+```
+## 출처
+[<i class="fas fa-link"></i> github.com/apple/swift/blob/main/stdlib/public/core/Array](https://github.com/apple/swift/blob/main/stdlib/public/core/Array.swift){:target="_blank"}
