--- a/swift/data-type/_posts/2019-02-02-boxing.md
+++ b/swift/data-type/_posts/2019-02-02-boxing.md
@@ -2,31 +2,35 @@
 sidebar:
   title: "Swift"
   nav: sidebar-swift
-title: "Boxing"
+  icon: "fab fa-swift"
+title: "[Swift] Boxing"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : value type 을 reference type 으로 변경하는 것을 Boxing, reference type 을 value type 으로 변경하는 것을 Unboxing 이라 한다.
+tag: "Swift Data Type"
+depth: 
+  - title: "Swift"
+    url: /swift/
+    icon: "fab fa-swift"
+  - title: "Data Type"
+    url: /swift/data-type/
+    icon: "far fa-folder-open"
 ---
-[Swift](/swift/) / [Data Type](/swift/data-type/) / **{{ page.title }}**
-{: .notice--warning}
-
-## 1. 개요
-value type 을 reference type 으로 변경하는 것을 Boxing,
+value type 을 reference type 으로 변경하는 것을 Boxing,  
 reference type 을 value type 으로 변경하는 것을 Unboxing 이라 한다.
 
 
-## 2. Boxing
+## Boxing
 Value Type 의 동일한 값을 Reference Type 으로 Heap 영역에 저장한다.
 대표적으로 NSNumber, NSValue 가 있다.
 
-## 3 Unboxing
+## Unboxing
 Reference Type 의 Heap 에 저장된 값을 Stack 영역에 저장한다.
 
-## 4. 성능
+## 성능
 과정에서 새로운 메모리 공간이 할당되어야 하기 때문에 불필요한 Boxing, Unboxing 은 피하는 것이 좋다.
 
-## 5. 주의점
+## 주의점
 자료형의 불일치로 값의 손실이 발생할 수 있다.
 ```swift
 let num = NSNumber(floatLiteral: 123.45)
