--- a/cs/memory/_posts/2018-12-31-memory.md
+++ b/cs/memory/_posts/2018-12-31-memory.md
@@ -7,8 +7,8 @@ title: "메모리란?"
 toc: true
 toc_sticky: true
 toc_label: 목차
-group: "CS Memory"
-depth: 
+tag: "CS Memory"
+depth:
   - title: "CS"
     url: /cs/
     icon: "fas fa-microchip"
