--- a/git/blog/_posts/2021-08-18-start.md
+++ b/git/blog/_posts/2021-08-18-start.md
@@ -7,8 +7,8 @@ title: "Github 블로그 시작하기"
 toc: true
 toc_sticky: true
 toc_label: 목차
-group: "Blog"
-depth: 
+tag: "Blog"
+depth:
   - title: "Git"
     url: /git/
     icon: "fab fa-github"
@@ -114,4 +114,3 @@ utteranc 를 사용했다.
 
 
 [<i class="fas fa-link"></i>  참고 사이트 - 7271kim.github.com](https://github.com/7271kim/7271kim.github.com){:target="_blank"}
-
