--- a/ios/app-thinning/_posts/2021-01-23-on-demand.md
+++ b/ios/app-thinning/_posts/2021-01-23-on-demand.md
@@ -7,8 +7,8 @@ title: "On-demand Resource"
 toc: true
 toc_sticky: true
 toc_label: 목차
-group: "App Thinning"
-depth: 
+tag: "App Thinning"
+depth:
   - title: "iOS"
     url: /ios/
     icon: "fab fa-app-store-ios"
@@ -24,7 +24,7 @@ App Store는 Apple 서버의 리소스를 호스팅하고 다운로드를 관리
 앱 크기가 작아서 앱 다운로드 속도가 빨라져 최초 실행 경험이 향상됩니다.  
 사용자가 앱을 탐색하는 동안 필요에 따라 on-demand resource 가 백그라운드에서 다운로드됩니다.  
 운영 체제는 더 이상 필요하지 않다고 판단하고 디스크 공간이 부족할 때 on-demand resource를 제거합니다.  
-예를 들어 앱은 리소스를 수준으로 나누고 앱에서 사용자가 해당 수준으로 이동할 것으로 예상하는 경우에만 다음 수준의 리소스를 요청할 수 있습니다. 
+예를 들어 앱은 리소스를 수준으로 나누고 앱에서 사용자가 해당 수준으로 이동할 것으로 예상하는 경우에만 다음 수준의 리소스를 요청할 수 있습니다.
 마찬가지로, 앱은 사용자가 해당 인앱 구매를 할 때만 인앱 구매 리소스를 요청할 수 있습니다.
 
 ![Image](https://help.apple.com/xcode/mac/current/en.lproj/Art/on_demand_resources_2x.png)
