--- a/ios/uiresponder/uiview/_posts/2021-04-23-bounds.md
+++ b/ios/uiresponder/uiview/_posts/2021-04-23-bounds.md
@@ -3,7 +3,7 @@ sidebar:
   title: "iOS"
   nav: sidebar-ios
   icon: "fab fa-app-store-ios"
-title: "bounds"
+title: "[UIView] bounds"
 toc: true
 toc_sticky: true
 toc_label: 목차
@@ -20,21 +20,22 @@ depth:
     icon: "far fa-folder-open"
 ---
 자신 기준  
+
 | frame     | bounds     |
 |---    |---    |
 | View의 위치와 크기를 나타낼 때     | View를 회전한 후 View의 **실제 크기를 알고 싶을 때**<br>View 내부에 그림을 그릴 때 (drawRect)<br>ScrollView에서 스크롤링 할 때     |
 
-## 2. origin
-- 나의 위치 좌표
-- 변경 시 나의 subview 들의 viewport 를 변경시킨다.
+## origin
+나의 위치 좌표  
+변경 시 나의 subview 들의 viewport 를 변경시킨다.
 
-## 3. size
+## size
 ![Image](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FMJsGQ%2FbtqL39KcHXP%2F1MJPghdI4qk7Pq6gvuAW4k%2Fimg.png)
 
-- 뷰를 회전시키더라도 자체 **사이즈**를 반환
+뷰를 회전시키더라도 자체 **사이즈**를 반환
 
-- 출처: 
-- [developer.apple.com](https://developer.apple.com/documentation/uikit/uiview/1622580-bounds)
-- [개발자 소들이 - iOS) Frame vs Bounds 제대로 이해하기 (1/3)](https://babbab2.tistory.com/44)
-- [개발자 소들이 - iOS) Frame vs Bounds 제대로 이해하기 (2/3)](https://babbab2.tistory.com/45)
-- [개발자 소들이 - iOS) Frame vs Bounds 제대로 이해하기 (3/3)](https://babbab2.tistory.com/46)
+## 출처
+[<i class="fas fa-link"></i> developer.apple.com](https://developer.apple.com/documentation/uikit/uiview/1622580-bounds){:target="_blank"}  
+[<i class="fas fa-link"></i> 개발자 소들이 - iOS) Frame vs Bounds 제대로 이해하기 (1/3)](https://babbab2.tistory.com/44){:target="_blank"}  
+[<i class="fas fa-link"></i> 개발자 소들이 - iOS) Frame vs Bounds 제대로 이해하기 (2/3)](https://babbab2.tistory.com/45){:target="_blank"}  
+[<i class="fas fa-link"></i> 개발자 소들이 - iOS) Frame vs Bounds 제대로 이해하기 (3/3)](https://babbab2.tistory.com/46){:target="_blank"}
