--- a/swift/StringProtocol/_posts/2019-09-04-compare.md
+++ b/swift/StringProtocol/_posts/2019-09-04-compare.md
@@ -2,17 +2,21 @@
 sidebar:
   title: "Swift"
   nav: sidebar-swift
+  icon: "fab fa-swift"
 title: "compare(_:)"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : ComparisonResult 를 사용하여 문자열을 비교한다. 
+tag: "StringProtocol"
+depth:
+  - title: "Swift"
+    url: /swift/
+    icon: "fab fa-swift"
+  - title: "StringProtocol"
+    url: /swift/stringprotocol/
+    icon: "far fa-folder-open"
 ---
-[Swift](/swift/) / [StringProtocol](/swift/stringprotocol/) / **{{ page.title }}**
-{: .notice--warning}
-
-## 1. 개요
-[ComparisonResult](/ios/foundation/objcruntime/comparisonresult/) 를 사용하여 문자열을 비교한다.
+[<i class="fas fa-link"></i> ComparisonResult](/ios/foundation/objcruntime/comparisonresult/) 를 사용하여 문자열을 비교한다.
 
 ```swift
 func compare<T>(_ aString: T,
@@ -22,7 +26,7 @@ func compare<T>(_ aString: T,
 -> ComparisonResult where T : StringProtocol
 ```
 
-## 2. Ascii 기준 정렬
+## Ascii 기준 정렬
 ```swift
 switch "Apple".compare("Google") {
 case .orderedAscending:
@@ -59,7 +63,7 @@ print(Character("o").asciiValue) // Optional(111)
 p 과 o 을 비교하였을 때 112 ... 111 이 된다. 따라 Descending 을 리턴한다.
 >descending: [형용사] 내려가는, 강하하는, 하향의(opp. ascending); [컴퓨터] 내림차순의
 
-## 3. caseInsensitiveCompare(_:)
+## caseInsensitiveCompare(_:)
 대소문자 구분 없이 문자를 비교할때 사용된다.
 >앞서 compare(_:) 는 ascii 로 구분을 하기 때문에 대소문자를 비교하게 된다.
 
@@ -72,7 +76,7 @@ if "Apple".caseInsensitiveCompare("apple") == ComparisonResult.orderedSame {
 // equal
 ```
 
-## 4. Eqaul 은 대소문자를 구분한다.
+## Eqaul 은 대소문자를 구분한다.
 ```swift
 if "Apple" == "apple" {
   print("equal")
@@ -91,7 +95,7 @@ if NSString("Apple").isEqual(to: NSString("apple")) {
 // not equal
 ```
 
-## 5. 비교연산자
+## 비교연산자
 <. <=, >, >= 는 compare(_:) 와 동일하게 동작한다.
 ```swift
 if "Apple" < "apple" {
