--- a/swift/closure/_posts/2019-01-03-escaping.md
+++ b/swift/closure/_posts/2019-01-03-escaping.md
@@ -2,17 +2,19 @@
 sidebar:
   title: "Swift"
   nav: sidebar-swift
-title: "@escaping"
+  icon: "fab fa-swift"
+title: "[Swift] @escaping"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 해당 함수의 인자로 클로저가 전달되지만, 함수가 종료되어도 실행 되는 것을 보장한다. 
+tag: "Swift"
+depth:
+  - title: "Swift"
+    url: /swift/
+    icon: "fab fa-swift"
+  - title: "Closure"
+    url: /swift/closure/
+    icon: "far fa-folder-open"
 ---
-[Swift](/swift/) / [Closure](/swift/closure/) / **{{ page.title }}**
-{: .notice--warning}
-
-## 1. 개요
-해당 함수의 인자로 클로저가 전달되지만, 함수가 종료되어도 실행 되는 것을 보장한다. 
+해당 함수의 인자로 클로저가 전달되지만, 함수가 종료되어도 실행 되는 것을 보장한다.
 즉 함수의 scope 밖에서 실행이 가능하다.
-
-
