--- a/swift/collections/_posts/2021-07-23-set.md
+++ b/swift/collections/_posts/2021-07-23-set.md
@@ -2,36 +2,53 @@
 sidebar:
   title: "Swift"
   nav: sidebar-swift
+  icon: "fab fa-swift"
 title: "Set"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : Value type 이다.
+tag: "Swift Collections"
+depth:
+  - title: "Swift"
+    url: /swift/
+    icon: "fab fa-swift"
+  - title: "Collections"
+    url: /swift/collections/
+    icon: "far fa-folder-open"
 ---
-[Swift](/swift/) / [Collections](/swift/collections/) / **{{ page.title }}**
-{: .notice--warning}
-
-## 1. 개요
+Value type 이다.  
 ```swift
 @frozen public struct Set<Element> where Element : Hashable
 ```
 
-## 2. subscript(_:)
-- O(1)
+## subscript(_:)
+```
+O(1)
+```
 
-## 2. count
-- O(1)
+## count
+```
+O(1)
+```
 
-## 3. contains(_:)
-- O(1)
+## contains(_:)
+```
+O(1)
+```
 
-## 4. contains(where:)
-- O(N)
+## contains(where:)
+```
+O(1)
+```
 
-## 5. removeFirst()
-- 평균 O(1)
+## removeFirst()
+```
+O(1)
+```
 
-## 6. firstIndex(of:)
-- O(1)
-
-- [github.com/apple/swift/blob/main/stdlib/public/core/Set](github.com/apple/swift/blob/main/stdlib/public/core/Set.swift)
+## firstIndex(of:)
+```
+O(1)
+```
+## 출처
+[<i class="fas fa-link"></i> github.com/apple/swift/blob/main/stdlib/public/core/Set](github.com/apple/swift/blob/main/stdlib/public/core/Set.swift){:target="_blank"}
