--- a/swift/inheritance/_posts/2018-12-07-final.md
+++ b/swift/inheritance/_posts/2018-12-07-final.md
@@ -2,22 +2,24 @@
 sidebar:
   title: "Swift"
   nav: sidebar-swift
+  icon: "fab fa-swift"
 title: "final"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : final 예약어 키워드로 재정의를 방지하여 컴파일 타임에 오류를 방지한다.
+tag: "Swift Inheritance"
+depth:
+  - title: "Swift"
+    url: /swift/
+    icon: "fab fa-swift"
+  - title: "Inheritance"
+    url: /swift/inheritance/
+    icon: "far fa-folder-open"
 ---
-[Swift](/swift/) / [Inheritance](/swift/inheritance/) / **{{ page.title }}**
-{: .notice--warning}
-
-![Image](https://drive.google.com/uc?export=view&id=16859ih3bEG1A9YykHNS9BLDxaeajJTNV)
-
-## 1. 개요
-final 예약어 키워드로 재정의를 방지하여 컴파일 타임에 오류를 방지한다.<br/>
+final 예약어 키워드로 재정의를 방지하여 컴파일 타임에 오류를 방지한다.  
 다른 클래스가 상속할 수 없는 클래스를 Final 클래스 라고 부른다.
 
-## 2. 사용 가능 키워드
+## 사용 가능 키워드
 1. 클래스
 2. 속성
 3. 메소스
@@ -30,17 +32,17 @@ final class func
 final func subscript
 ```
 
-## 3. final 을 이용한 재정의 방지
+## final 을 이용한 재정의 방지
 ```swift
 class ParticleModel {
   var point = ( 0.0, 0.0 )
   var velocity = 100.0
-    
+
   func updatePoint(newPoint: (Double, Double), newVelocity: Double) {
       point = newPoint
       velocity = newVelocity
   }
-    
+
   func update(newP: (Double, Double), newV: Double) {
       updatePoint(newPoint: newP, newVelocity: newV)
   }
@@ -57,17 +59,18 @@ class ChildModel: ParticleModel {
   }
 }
 ```
+![Image](https://drive.google.com/uc?export=view&id=16859ih3bEG1A9YykHNS9BLDxaeajJTNV)
 
 ```swift
 class ParticleModel {
   final var point = ( 0.0, 0.0 )
   var velocity = 100.0
-    
+
   func updatePoint(newPoint: (Double, Double), newVelocity: Double) {
       point = newPoint
       velocity = newVelocity
   }
-    
+
   func update(newP: (Double, Double), newV: Double) {
       updatePoint(newPoint: newP, newVelocity: newV)
   }
@@ -84,7 +87,7 @@ class ChildModel: ParticleModel {
   }
 }
 ```
-## 4. initailize
+## initailize
 final 클래스는 required 식별자를 붙여줄 필요가 없다.<br/>
 상속할 수 없는 클래스의 요청 이니셜 라이저 구현은 무의미 하다.
 
@@ -95,7 +98,7 @@ required 를 붙여도 문법상 문제는 없다.
 ```swift
 final class ChildModel: ParticleModel {
   var name: String
-    
+
   required init(name: String) { // X
       self.name = name
   }
@@ -105,14 +108,14 @@ final class ChildModel: ParticleModel {
 ```swift
 final class ChildModel: ParticleModel {
   var name: String
-    
+
   init(name: String) { // OK
       self.name = name
   }
 }
 ```
 
-## 5. pivate final
+## pivate final
 private 은 final 명시가 가능하지만 의미는 없다.
 ```swift
 class ChildModel: ParticleModel {
@@ -124,21 +127,22 @@ class ChildModel: ParticleModel {
 }
 ```
 
-## 6. 성능
+## 성능
 Swift 는 일반적으로 모듈을 개별적으로 구성하는 파일 단위로 컴파일 된다.
 전체 모듈을 최적화 할때 컴파일러는 final, private 에 대해 추론이 가능하다.
 
 런타임에 추론되는가? 컴파일타임에 추론되는가? 의 성능 차이가 발생한다.
 
 private 과 final 은 컴파일러 최적화가 가능하다.
-최적화 동작은 컴파일러 내부 세팅에 의해 일어나기 때문에 가능은 하더라도 항상 보장되지 않는다. 
+최적화 동작은 컴파일러 내부 세팅에 의해 일어나기 때문에 가능은 하더라도 항상 보장되지 않는다.
 
 
 >전체 모듈을 최적화 할때 컴파일러는 final, private 에 대해 추론이 가능하고 오버헤드를 줄일 수 있다고 한다.<br/>
 
-## 8. 클린 코드의 관점
+## 클린 코드의 관점
 기본적으로 코드 가독성을 해지지 않고 명시한 부분에 사용 정의하는게 좋다.
 지나친 남용은 코드의 readability 를 해칠 것이고 동료 개발자와 합의가 필요할 것이다.
 코드 리뷰를 진행한다면 자연스럽게 논의가 되며 합의점을 찾을 수 있다.
 
-[참고- developer.apple.com/swift/blog/](https://developer.apple.com/swift/blog/)
+## 참고
+[<i class="fas fa-link"></i> developer.apple.com/swift/blog/](https://developer.apple.com/swift/blog/){:target="_blank"}
