[Fix] compare 하나로 합침

--- a/swift/stringprotocol/_posts/2019-09-04-compare.md
+++ b/swift/stringprotocol/_posts/2019-09-04-compare.md
@@ -110,3 +110,35 @@ print(Character("A").asciiValue) // Optional(65)
 print(Character("a").asciiValue) // Optional(97)
 ```
 A 와 a 을 비교하였을 때 65 ... 97 이 된다. 따라 조건은 true 가 된다.
+
+## compare(_:range:) 특정 Range 를 통한 비교
+```swift
+let ret = "문자열을 비교합니다.".compare("문자열")
+print(result.rawValue)
+// 1
+```
+
+```swift
+let text = "문자열"
+let textRange = text.startIndex ..< text.endIndex
+let ret = "문자열을 비교합니다.".compare(text, range: textRange)
+print(ret.rawValue)
+// 0
+```
+
+## compare(_:options:range:) hasPrefix 와의 비교
+```swift
+let a = "Archives"
+
+print(a.hasPrefix("Arc"))
+// true
+print(a.hasSuffix("Foundation"))
+// false
+
+let range = a.startIndex ..< a.index(a.startIndex, offsetBy: 5)
+let ret = a.compare("archi",
+                    options: [.caseInsensitive],
+                    range: range)
+print(ret.rawValue)
+```
+hasPrefix 는 범위 지정 없이 비교하지만, compare 는 range 를 통해 범위를 확정하여 비교가 가능하다.
